# my_modules

./: CMakeLists.txt
CyclePeakLookahead/: CMakeLists.txt  CyclePeakLookahead.aps  CyclePeakLookahead.cpp  CyclePeakLookahead.h  CyclePeakLookahead.htm  CyclePeakLookahead.rc  CyclePeakLookahead.sln  CyclePeakLookahead.vcxproj  CyclePeakLookahead.vcxproj.filters  CyclePeakLookahead.xml  RCa07724  README.md
CyclePeakLookahead/CyclePea.411C7FFE/x64/Debug/CyclePea.411C7FFE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CyclePeakLookahead.lastbuildstate
CyclePeakLookahead/mac/CyclePeakLookahead.xcodeproj/: project.pbxproj
CyclePeakLookahead/src/: CyclePeakLookahead.cpp  factory.cpp
Mymodule/: CMakeLists.txt  Mymodule.cpp  Mymodule.rc  Mymodule.vcxproj  Mymodule.vcxproj.filters  Mymodule.xml
Mymodule/mac/Mymodule.xcodeproj/: project.pbxproj
RwS3Power/: CMakeLists.txt  RwS3Power.cpp  RwS3Power.rc  RwS3Power.vcxproj  RwS3Power.vcxproj.filters  RwS3Power.xml
RwS3Power/mac/RwS3Power.xcodeproj/: project.pbxproj
RwSMultiply/: CMakeLists.txt  RCa08520  RwSMultiply.aps  RwSMultiply.cpp  RwSMultiply.htm  RwSMultiply.rc  RwSMultiply.vcxproj  RwSMultiply.vcxproj.filters  RwSMultiply.xml
RwSMultiply/mac/RwSMultiply.xcodeproj/: project.pbxproj
